# Kranker3D--old

./: .gitignore  .gitmodules  README.md
Kranker3D/: CMakeLists.txt  Kranker3D.cpp  Kranker3D.sln  Kranker3D.vcxproj  Kranker3D.vcxproj.filters  stdafx.h
Kranker3D/resources/meshes/: DragonData.h
Kranker3D/resources/shaders/: 3D_heart_fragment.glsl  3D_heart_vertex.glsl  simple.fs.glsl  test_fragment.glsl  test_vertex.glsl  transform.fs.glsl  transform.vs.glsl
Kranker3D/src/: Kranker3D.cpp
Kranker3D/src/context/: IRenderingContext.h  ImGUI_context.cpp  ImGUI_context.h  OpenGL_context.cpp  OpenGL_context.h  customSmartPointers.h  window.cpp  window.h
Kranker3D/src/core/io/: file.cpp  file.h
Kranker3D/src/core/objects/: camera.cpp  camera.h  object.cpp  object.h  transform.cpp  transform.h
Kranker3D/src/core/rendering/: mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
Kranker3D/src/rendering/: IContext.h  ImGUI_context.cpp  ImGUI_context.h  OpenGL_context.cpp  OpenGL_context.h  window.cpp  window.h
Kranker3D/src/ui/: panel.cpp  panel.h  propertyPanel.cpp  propertyPanel.h  window.cpp  window.h
